src/objects/loan__Home_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>loan__Building_Material__c</fullName>
        <label>Building Material</label>
        <picklist>
            <picklistValues>
                <fullName>Brick/concrete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tin/Asbestos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloth/Plastic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__Client__c</fullName>
        <label>Client</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Home Evaluations</relationshipLabel>
        <relationshipName>Home_Evaluations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Condition_of_House__c</fullName>
        <label>Condition of House</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Home_Documentation__c</fullName>
        <label>Home Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Rental/Sales Agreement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ration Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__Home_Ownership__c</fullName>
        <label>Home Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Owned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rented</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__House_hold_assets__c</fullName>
        <label>House-hold assets</label>
        <picklist>
            <picklistValues>
                <fullName>Table/ Chair</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cupboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sofa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewing Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washing Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD/ Music system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Rickshaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two-wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four-wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Home Evaluations</relationshipLabel>
        <relationshipName>Home_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__No_of_rooms__c</fullName>
        <label>No. of rooms</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;2 rooms</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 room</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_years_at_current_residence__c</fullName>
        <label>Number of years at current residence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Services_Available__c</fullName>
        <label>Services Available</label>
        <picklist>
            <picklistValues>
                <fullName>Running water</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landline</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Home Evaluation</label>
    <nameField>
        <displayFormat>HEID-{0000000000}</displayFormat>
        <label>Home Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Evaluation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>